--- a/pages/favorites_1_4_21.html
+++ b/pages/favorites_1_4_21.html
@@ -1,3 +1,7 @@
+---
+permalink: /links
+---
+
 <!DOCTYPE NETSCAPE-Bookmark-file-1>
 <!-- This is an automatically generated file.
      It will be read and overwritten.
